AJuste variavel de ambiente